# arm-hackathon

./: .gitignore  CHANGELOG.md  DIVISION_OF_LABOUR.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: simulation-rules.md
scenarios/: standard_habitat.json
src/icarus/: __init__.py  __main__.py  actuator.py  config.py  control.py  plant.py  scenario.py  trace.py  visualise.py
tests/: conftest.py  test_actuator.py  test_config.py  test_control.py  test_plant.py  test_scenarios.py  test_trace.py  test_visualise.py
traces/: standard_habitat.jsonl
